Analysis/.antlr/MiriParser.java
// Generated from /Users/ricardolicea/OneDrive/Tecnol?gico de Monterrey/8vo Semestre/EM18 Dise?o de Compiladores/MIRI/Analysis/Miri.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MiriParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, END=2, DECLARE=3, MAIN=4, IF=5, ELSE=6, WHILE=7, FOR=8, DO_WHILE=9, 
		WRITE=10, READ=11, FUNCTION=12, ARCH=13, CIRCLE=14, SQUARE=15, AND=16, 
		OR=17, RETURN=18, PAINT=19, BOOL=20, FLOAT=21, ID=22, INT=23, STRING=24, 
		ASSGN=25, COMMA=26, SEMICOLON=27, DOT=28, COLON=29, LEFTBRACK=30, RIGHTBRACK=31, 
		LEFTPAR=32, RIGHTPAR=33, LEFTKEY=34, RIGHTKEY=35, QUOTE=36, SUM=37, MINUS=38, 
		MULTP=39, DIVIDE=40, GRTR=41, LESS=42, EQ=43, NOTEQ=44, GRTREQ=45, LESSEQ=46;
	public static final int
		RULE_program = 0, RULE_declare = 1, RULE_dataType = 2, RULE_array = 3, 
		RULE_cuerpo = 4, RULE_estatutos = 5, RULE_assignment = 6, RULE_conditional = 7, 
		RULE_cycle = 8, RULE_while = 9, RULE_do_while = 10, RULE_for = 11, RULE_exp = 12, 
		RULE_output = 13, RULE_inputData = 14, RULE_llamada_f = 15, RULE_arithmeticOperator = 16, 
		RULE_geofig = 17, RULE_circle = 18, RULE_square = 19, RULE_arch = 20;
	public static final String[] ruleNames = {
		"program", "declare", "dataType", "array", "cuerpo", "estatutos", "assignment", 
		"conditional", "cycle", "while", "do_while", "for", "exp", "output", "inputData", 
		"llamada_f", "arithmeticOperator", "geofig", "circle", "square", "arch"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'program'", "'end'", "'declare'", "'main'", "'if'", "'else'", "'while'", 
		"'for'", "'do'", "'write'", "'read'", "'funct'", "'arch'", "'circle'", 
		"'square'", "'and'", "'or'", "'return'", "'paint'", null, null, null, 
		null, null, "'='", "','", "';'", "'.'", "':'", "'['", "']'", "'('", "')'", 
		"'{'", "'}'", "'\"'", "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'=='", 
		"'!='", "'>='", "'<='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "PROGRAM", "END", "DECLARE", "MAIN", "IF", "ELSE", "WHILE", "FOR", 
		"DO_WHILE", "WRITE", "READ", "FUNCTION", "ARCH", "CIRCLE", "SQUARE", "AND", 
		"OR", "RETURN", "PAINT", "BOOL", "FLOAT", "ID", "INT", "STRING", "ASSGN", 
		"COMMA", "SEMICOLON", "DOT", "COLON", "LEFTBRACK", "RIGHTBRACK", "LEFTPAR", 
		"RIGHTPAR", "LEFTKEY", "RIGHTKEY", "QUOTE", "SUM", "MINUS", "MULTP", "DIVIDE", 
		"GRTR", "LESS", "EQ", "NOTEQ", "GRTREQ", "LESSEQ"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Miri.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiriParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(MiriParser.PROGRAM, 0); }
		public TerminalNode ID() { return getToken(MiriParser.ID, 0); }
		public List<TerminalNode> SEMICOLON() { return getTokens(MiriParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(MiriParser.SEMICOLON, i);
		}
		public TerminalNode END() { return getToken(MiriParser.END, 0); }
		public TerminalNode DECLARE() { return getToken(MiriParser.DECLARE, 0); }
		public Llamada_fContext llamada_f() {
			return getRuleContext(Llamada_fContext.class,0);
		}
		public CuerpoContext cuerpo() {
			return getRuleContext(CuerpoContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(PROGRAM);
			setState(43);
			match(ID);
			setState(44);
			match(SEMICOLON);
			setState(48);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DECLARE:
				{
				setState(45);
				match(DECLARE);
				setState(46);
				llamada_f();
				}
				break;
			case MAIN:
				{
				setState(47);
				cuerpo();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(50);
			match(END);
			setState(51);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(MiriParser.DECLARE, 0); }
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(MiriParser.ID, 0); }
		public TerminalNode COLON() { return getToken(MiriParser.COLON, 0); }
		public TerminalNode SEMICOLON() { return getToken(MiriParser.SEMICOLON, 0); }
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public DeclareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare; }
	}

	public final DeclareContext declare() throws RecognitionException {
		DeclareContext _localctx = new DeclareContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declare);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(DECLARE);
			setState(54);
			dataType();
			setState(55);
			match(ID);
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COLON:
				{
				setState(56);
				match(COLON);
				}
				break;
			case SEMICOLON:
				{
				setState(57);
				match(SEMICOLON);
				}
				break;
			case LEFTBRACK:
				{
				setState(58);
				array();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataTypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(MiriParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(MiriParser.FLOAT, 0); }
		public TerminalNode STRING() { return getToken(MiriParser.STRING, 0); }
		public TerminalNode BOOL() { return getToken(MiriParser.BOOL, 0); }
		public DataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataType; }
	}

	public final DataTypeContext dataType() throws RecognitionException {
		DataTypeContext _localctx = new DataTypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dataType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << FLOAT) | (1L << INT) | (1L << STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayContext extends ParserRuleContext {
		public List<TerminalNode> LEFTBRACK() { return getTokens(MiriParser.LEFTBRACK); }
		public TerminalNode LEFTBRACK(int i) {
			return getToken(MiriParser.LEFTBRACK, i);
		}
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<TerminalNode> RIGHTBRACK() { return getTokens(MiriParser.RIGHTBRACK); }
		public TerminalNode RIGHTBRACK(int i) {
			return getToken(MiriParser.RIGHTBRACK, i);
		}
		public TerminalNode SEMICOLON() { return getToken(MiriParser.SEMICOLON, 0); }
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_array);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(LEFTBRACK);
			setState(64);
			exp();
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(65);
				match(RIGHTBRACK);
				setState(66);
				match(LEFTBRACK);
				setState(67);
				exp();
				setState(68);
				match(RIGHTBRACK);
				}
				break;
			}
			setState(72);
			match(RIGHTBRACK);
			setState(73);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CuerpoContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(MiriParser.MAIN, 0); }
		public TerminalNode LEFTPAR() { return getToken(MiriParser.LEFTPAR, 0); }
		public TerminalNode RIGHTPAR() { return getToken(MiriParser.RIGHTPAR, 0); }
		public TerminalNode LEFTKEY() { return getToken(MiriParser.LEFTKEY, 0); }
		public EstatutosContext estatutos() {
			return getRuleContext(EstatutosContext.class,0);
		}
		public TerminalNode RIGHTKEY() { return getToken(MiriParser.RIGHTKEY, 0); }
		public CuerpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo; }
	}

	public final CuerpoContext cuerpo() throws RecognitionException {
		CuerpoContext _localctx = new CuerpoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cuerpo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(MAIN);
			setState(76);
			match(LEFTPAR);
			setState(77);
			match(RIGHTPAR);
			setState(78);
			match(LEFTKEY);
			setState(79);
			estatutos();
			setState(80);
			match(RIGHTKEY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EstatutosContext extends ParserRuleContext {
		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class,0);
		}
		public CycleContext cycle() {
			return getRuleContext(CycleContext.class,0);
		}
		public TerminalNode READ() { return getToken(MiriParser.READ, 0); }
		public TerminalNode WRITE() { return getToken(MiriParser.WRITE, 0); }
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public Llamada_fContext llamada_f() {
			return getRuleContext(Llamada_fContext.class,0);
		}
		public EstatutosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estatutos; }
	}

	public final EstatutosContext estatutos() throws RecognitionException {
		EstatutosContext _localctx = new EstatutosContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_estatutos);
		try {
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				conditional();
				}
				break;
			case WHILE:
			case FOR:
			case DO_WHILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				cycle();
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				match(READ);
				}
				break;
			case WRITE:
				enterOuterAlt(_localctx, 4);
				{
				setState(85);
				match(WRITE);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 5);
				{
				setState(86);
				assignment();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 6);
				{
				setState(87);
				llamada_f();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(MiriParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MiriParser.ID, i);
		}
		public TerminalNode ASSGN() { return getToken(MiriParser.ASSGN, 0); }
		public TerminalNode SEMICOLON() { return getToken(MiriParser.SEMICOLON, 0); }
		public TerminalNode FUNCTION() { return getToken(MiriParser.FUNCTION, 0); }
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(ID);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LEFTBRACK) {
				{
				setState(91);
				array();
				}
			}

			setState(94);
			match(ASSGN);
			setState(95);
			_la = _input.LA(1);
			if ( !(_la==FUNCTION || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(96);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(MiriParser.IF, 0); }
		public TerminalNode LEFTPAR() { return getToken(MiriParser.LEFTPAR, 0); }
		public TerminalNode RIGHTPAR() { return getToken(MiriParser.RIGHTPAR, 0); }
		public List<TerminalNode> LEFTKEY() { return getTokens(MiriParser.LEFTKEY); }
		public TerminalNode LEFTKEY(int i) {
			return getToken(MiriParser.LEFTKEY, i);
		}
		public List<EstatutosContext> estatutos() {
			return getRuleContexts(EstatutosContext.class);
		}
		public EstatutosContext estatutos(int i) {
			return getRuleContext(EstatutosContext.class,i);
		}
		public List<TerminalNode> RIGHTKEY() { return getTokens(MiriParser.RIGHTKEY); }
		public TerminalNode RIGHTKEY(int i) {
			return getToken(MiriParser.RIGHTKEY, i);
		}
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(MiriParser.ELSE, 0); }
		public ConditionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional; }
	}

	public final ConditionalContext conditional() throws RecognitionException {
		ConditionalContext _localctx = new ConditionalContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_conditional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(IF);
			setState(99);
			match(LEFTPAR);
			setState(101); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(100);
				exp();
				}
				}
				setState(103); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID || _la==ASSGN );
			setState(105);
			match(RIGHTPAR);
			setState(106);
			match(LEFTKEY);
			setState(107);
			estatutos();
			setState(108);
			match(RIGHTKEY);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(109);
				match(ELSE);
				setState(110);
				match(LEFTKEY);
				setState(111);
				estatutos();
				setState(112);
				match(RIGHTKEY);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CycleContext extends ParserRuleContext {
		public WhileContext while() {
			return getRuleContext(WhileContext.class,0);
		}
		public Do_whileContext do_while() {
			return getRuleContext(Do_whileContext.class,0);
		}
		public ForContext for() {
			return getRuleContext(ForContext.class,0);
		}
		public CycleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cycle; }
	}

	public final CycleContext cycle() throws RecognitionException {
		CycleContext _localctx = new CycleContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cycle);
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WHILE:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				while();
				}
				break;
			case DO_WHILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				do_while();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				for();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(MiriParser.WHILE, 0); }
		public TerminalNode LEFTPAR() { return getToken(MiriParser.LEFTPAR, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode RIGHTPAR() { return getToken(MiriParser.RIGHTPAR, 0); }
		public TerminalNode LEFTKEY() { return getToken(MiriParser.LEFTKEY, 0); }
		public EstatutosContext estatutos() {
			return getRuleContext(EstatutosContext.class,0);
		}
		public TerminalNode RIGHTKEY() { return getToken(MiriParser.RIGHTKEY, 0); }
		public WhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while; }
	}

	public final WhileContext while() throws RecognitionException {
		WhileContext _localctx = new WhileContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_while);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(WHILE);
			setState(122);
			match(LEFTPAR);
			setState(123);
			exp();
			setState(124);
			match(RIGHTPAR);
			setState(125);
			match(LEFTKEY);
			setState(126);
			estatutos();
			setState(127);
			match(RIGHTKEY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Do_whileContext extends ParserRuleContext {
		public TerminalNode DO_WHILE() { return getToken(MiriParser.DO_WHILE, 0); }
		public TerminalNode LEFTKEY() { return getToken(MiriParser.LEFTKEY, 0); }
		public EstatutosContext estatutos() {
			return getRuleContext(EstatutosContext.class,0);
		}
		public TerminalNode RIGHTKEY() { return getToken(MiriParser.RIGHTKEY, 0); }
		public TerminalNode WHILE() { return getToken(MiriParser.WHILE, 0); }
		public TerminalNode LEFTPAR() { return getToken(MiriParser.LEFTPAR, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode RIGHTPAR() { return getToken(MiriParser.RIGHTPAR, 0); }
		public Do_whileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_do_while; }
	}

	public final Do_whileContext do_while() throws RecognitionException {
		Do_whileContext _localctx = new Do_whileContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_do_while);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(DO_WHILE);
			setState(130);
			match(LEFTKEY);
			setState(131);
			estatutos();
			setState(132);
			match(RIGHTKEY);
			setState(133);
			match(WHILE);
			setState(134);
			match(LEFTPAR);
			setState(135);
			exp();
			setState(136);
			match(RIGHTPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(MiriParser.FOR, 0); }
		public TerminalNode LEFTPAR() { return getToken(MiriParser.LEFTPAR, 0); }
		public List<TerminalNode> SEMICOLON() { return getTokens(MiriParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(MiriParser.SEMICOLON, i);
		}
		public TerminalNode RIGHTPAR() { return getToken(MiriParser.RIGHTPAR, 0); }
		public TerminalNode LEFTKEY() { return getToken(MiriParser.LEFTKEY, 0); }
		public EstatutosContext estatutos() {
			return getRuleContext(EstatutosContext.class,0);
		}
		public TerminalNode RIGHTKEY() { return getToken(MiriParser.RIGHTKEY, 0); }
		public List<TerminalNode> ID() { return getTokens(MiriParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MiriParser.ID, i);
		}
		public List<TerminalNode> ASSGN() { return getTokens(MiriParser.ASSGN); }
		public TerminalNode ASSGN(int i) {
			return getToken(MiriParser.ASSGN, i);
		}
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<ArithmeticOperatorContext> arithmeticOperator() {
			return getRuleContexts(ArithmeticOperatorContext.class);
		}
		public ArithmeticOperatorContext arithmeticOperator(int i) {
			return getRuleContext(ArithmeticOperatorContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MiriParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MiriParser.COMMA, i);
		}
		public ForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for; }
	}

	public final ForContext for() throws RecognitionException {
		ForContext _localctx = new ForContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_for);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(FOR);
			setState(139);
			match(LEFTPAR);
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(140);
				match(ID);
				setState(141);
				match(ASSGN);
				setState(142);
				match(ID);
				{
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(143);
					match(COMMA);
					}
				}

				}
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(151);
			match(SEMICOLON);
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID || _la==ASSGN) {
				{
				{
				setState(152);
				exp();
				{
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(153);
					match(COMMA);
					}
				}

				}
				}
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(161);
			match(SEMICOLON);
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(162);
				match(ID);
				setState(163);
				arithmeticOperator();
				setState(164);
				arithmeticOperator();
				{
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(165);
					match(COMMA);
					}
				}

				}
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(173);
			match(RIGHTPAR);
			setState(174);
			match(LEFTKEY);
			setState(175);
			estatutos();
			setState(176);
			match(RIGHTKEY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
